# mu-image

./: .travis.yml  CMakeLists.txt  README.md
assets/: mu-image.desktop
resources/: mu-image.qrc
src/: cropcommand.cpp  cropcommand.h  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  muimage.cpp  muimage.h  scalecommand.cpp  scalecommand.h  selection.cpp  selection.h
ui/: mainwindow.ui
